--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: ["main"]
   workflow_dispatch:
+  pull_request:
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -15,26 +17,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '18'
-  #         cache: 'npm'
-
-  #     - name: Install dependencies
-  #       run: npm ci --prefer-offline
-
-  #     - name: Run ESLint
-  #       run: npm run lint
-
   build-site:
-    # needs: [lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
