--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo 'This project does not have tests yet lol.' && exit 0"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
