--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:css": "bunx tailwindcss -i ./src/App.css -o ./src/output.css --watch",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "echo 'This project does not have tests yet lol.' && exit 0"
@@ -31,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "tailwindcss-motion": "^1.1.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
