--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Run lint
-        run: bun run lint
+      # - name: Run lint
+      #   run: bun run lint
 
       - name: Run tests
         run: bun run test
