--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.11",
+    "clsx": "^2.1.1",
     "install": "^0.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
